# coward-bot

./: Cargo.toml  rustfmt.toml  temp.ron
crates/coward_binance/: Cargo.toml
crates/coward_binance/src/: lib.rs  models.rs  util.rs
crates/coward_exchange/: Cargo.toml
crates/coward_exchange/src/: lib.rs
src/: bot.rs  lib.rs  main.rs
