[package]
name = "coward_bot"
version = "0.1.0"
authors = ["Jerahmeel Cosinas <me@jerahmeelcosinas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["crates/*"]

[dependencies]
coward_exchange = {path = "crates/coward_exchange", version = "0.1.0" }
coward_binance = {path = "crates/coward_binance", version = "0.1.0" }

[dev-dependencies]
proptest = "0.10.1"