[package]
name = "coward_bot"
version = "0.1.0"
authors = ["Jerahmeel Cosinas <me@jerahmeelcosinas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.14"
binance = { git = "https://github.com/wisespace-io/binance-rs.git", rev = "a9a1e5b305fd283238f073b6f483dec2956af6cd" }

[dev-dependencies]
proptest = "1.0"